# gst-video-splitter

./: CMakeLists.txt  README.md  main.c
